# kumou

./: .envrc  Cargo.toml  LICENSE  README.md  flake.nix  justfile
app/: Cargo.toml  Dioxus.toml  classes.rs
app/assets/css/: tailwind.css
app/css/: Cargo.toml  build.rs  classes.html  classes.rs
app/src/: main.rs
app/src/app/: model.rs
app/src/pages/: home.rs
data/kaikki.org/: kaikki.org-dictionary-Japanese-by-pos-particle.json
grammar/: Cargo.toml
grammar/src/: word.rs
graphql/: .env  Cargo.toml
graphql/src/: main.rs  query_root.rs
graphql/src/entities/: mod.rs  prelude.rs  sentence.rs  sentences.rs
japanese/: Cargo.toml
japanese/src/: class.rs  clause.rs  lib.rs  particle.rs  pattern.rs  piece.rs  word.rs  word_class.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
model/: Cargo.toml
model/src/: lib.rs  section.rs  sentence.rs
model/src/entities/: mod.rs  prelude.rs  sentence.rs  sentences.rs
model/src/entity/: sentence.rs
proto/: Cargo.toml
proto/src/: clause.rs  lib.rs  pattern.rs  piece.rs  section.rs  sentence.rs  word.rs
schema/: justfile
schema/migrations/: V1__create_sentence_table.sql  V1__create_sentences_table.sql
supabase/: config.toml
surreal/: Cargo.toml
